Added simplified demonstration of transcendental unity of apperception

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -79,7 +79,7 @@ However, upon what grounds do we have to reduce the power of understanding, into
 \end{quote}
 
 \noindent
-Alas, Kant himself never clearly elucidates the reasons why his table of judgements is apodeictically complete. Although it is clear that he borrows the technical apparatus of classical logic, he modifies said apparatus to suit his transcendental use, justifying only his modifications, and not the choice of the apparatus itself. Whether this is because the justification was already apparent to him, or simply an oversight is unknown to us. Kant's judgements hold a certain resemblance to modern fields of mathematical logic. However, there is no single axiomatic formalisation that neatly corresponds to to all four judgements which he lists. The judgements of quality are analogous to propositional calculus, while the judgements of relation are valid forms of logical inference within propositional calculus. Judgements of quantity are analogous to predicate logic, while the judgements of modality bear the closest resemblance to modal logic. The fact that these Kantian forms of judgement do not correspond neatly to any axiomatically-complete system of logic (for indeed, modal logic as a field has only had axiomatic formalisations in this century) makes it difficult to demonstrate apodeictically that such a table of judgement is complete. Hence, the transcendental analysis of these judgements may not rest upon as certain of a foundation as Kant implies. However, assuming that these judgements are indeed complete, we may move on forth with our journey and not embarrass our guide any further. Let us delve into the pure elements of understanding which we seek.
+Alas, Kant himself never clearly elucidates the reasons why his table of judgements is apodeictically complete. Although it is clear that he borrows the technical apparatus of classical logic, he modifies said apparatus to suit his transcendental use, justifying only his modifications, and not the choice of the apparatus itself. Whether this is because the justification was already apparent to him, or simply an oversight is unknown to us. Kant's judgements hold a certain resemblance to modern fields of mathematical logic. However, there is no single axiomatic formalisation that neatly corresponds to to all four judgements which he lists. The judgements of quality are analogous to propositional calculus, while the judgements of relation are valid forms of logical inference within propositional logic\footnote{We will use this as an analogy in a later section.}. Judgements of quantity are analogous to predicate logic, while the judgements of modality bear the closest resemblance to modal logic. The fact that these Kantian forms of judgement do not correspond neatly to any axiomatically-complete system of logic (for indeed, modal logic as a field has only had axiomatic formalisations in this century) makes it difficult to demonstrate apodeictically that such a table of judgement is complete. Hence, the transcendental analysis of these judgements may not rest upon as certain of a foundation as Kant implies. However, assuming that these judgements are indeed complete, we may move on forth with our journey and not embarrass our guide any further. Let us delve into the pure elements of understanding which we seek.
 
 Using the four logical judgements (or the `logical function in judgements', as per Kant's typical verbosity), we next perform the inductive or transcendental step -- of abstracting away from the content of judgement, to look at it's form. Mired in the difficulty of a rocky ascent, we are forced to take a brief detour to examine the byway of \emph{synthesis}, before the path forward becomes clear. Recall that the characteristic nature of concepts is their unifying function -- that act of uniting presentations. However the very act of judgement (i.e. unifying act) presupposes a priori the existence of a further concept, which gives unity to the synthesis of said disparate presentations. Hence, for all four formal logical judgement, there exists an associated a priori concept which gives synthetic unity to the presentations which underlie the judgement. These transcendental concepts -- now fully abstracted away from any material content of judgement, are the \emph{categories}: the \emph{pure elements of understanding} of the transcendental logic.
 
@@ -88,7 +88,7 @@ Using the four logical judgements (or the `logical function in judgements', as p
 \noindent
 These twelve categories which are given to us from the faculty of understanding serve as the same transcendental foundation for conception, as the a priori forms of space and time relate to intuition. Having met these elements which compose the second part of the transcendental doctrine of elements, we are now once again left to ask of their utility. "What do these categories tell us about metaphysics? Are space, time, and the categories sufficient grounds for a complete metaphysical foundation?" The answer to this question is a nuanced one. For the transcendental elements of space, time, and category, are still insufficient in isolation. As with chemical elements, they are inert in their pure, transcendentally isolated state. They are the mere feedstock of reactions, which yield the dizzying chemistry that is cognition. For as we have hinted at throughout our journey, it is the union of intuition and concept which leads to cognition.
 
-This union is conceived of originally as a mundane\footnote{As opposed to transcendental.} one. For it seems that the imposition of a sensible intuition upon understanding leads by it's very nature to an \emph{empirical concept}. That is, a cognition which refers to an object of intuition. This would make this union a metaphysically barren one, for such empirical cognitions are fundamentally \emph{objective}, and hence contingent -- there is no space for a priori knowledge here. There can be no morganatic marriage\footnote{A marriage between persons of unequal social rank, e.g. Archduke Franz Ferdinand and Sophie Chotek.} in which we can salvage the union -- for the nature of a category is to bring differing contents into synthesis, and the pure element of intuition are by their definition, contentless. Our exploration of the transcendental landscape end by necessity at this insurmountable cliff. This appears to be the case, at least to the untrained eyes of a visitor. However, Kant is able to solve this seemingly impossible unity, through an act of transcendental clarity.
+This union is conceived of originally as a mundane\footnote{As opposed to transcendental.} one. For it seems that the imposition of a sensible intuition upon understanding leads by it's very nature to an \emph{empirical concept}. That is, a cognition which refers to an object of intuition. This would make this marriage a metaphysically barren one, for such empirical cognitions are fundamentally \emph{objective}, and hence contingent -- there is no space for a priori knowledge here. There can be no morganatic marriage\footnote{A marriage between persons of unequal social rank, e.g. Archduke Franz Ferdinand and Sophie Chotek.} in which we can salvage the union -- for the nature of a category is to bring differing contents into synthesis, and the pure element of intuition are by their definition, contentless. Our exploration of the transcendental landscape would end by necessity, at this insurmountable cliff. This appears to be the case, at least to the untrained eyes of a visitor. However, Kant is able to solve this seemingly impossible unity, through an act of transcendental clarity.
 
 \noindent
 Recall that empirical concepts do not refer to singular, individual intuitions -- but rather, they refer to manifolds of intuition, as exemplified by the earlier `race car' example. These manifolds of intuition, which we talk about in the transcendental sense (i.e abstracted away from their content) still contain the a priori forms of space and time, as these are the necessary conditions to intuition. The existence of these a priori manifolds, which are not experience, but only the possibility of experience\footnote{Kant sometimes uses the word presentation, which is a more general form that also encompasses non-intuitive sources.} (as they contain the formal a prioriae of space and time) -- yields a transcendental manifold which is capable of union with the categories. But what manner of a manifold is this? An abstract and unconcerned manifold\footnote{A manifold that does not contain an experiential subject. I have not explained this distinction yet, but it will become clear in due course.} of possible experience cannot ever be united in synthesis with the categories of pure understanding. Categories are just the a priori forms of judgements, e.g. the form of $((P \lor Q) \land \neg P) \to Q$\footnote{propositional notation for a disjunctive judgement}. Even though the intuitive manifold provides us with the propositional terms $P, Q$ (to extend the propositional logic metaphor), and the categories provide us with all the brackets and squiggly signs; the ultimate logical implication (denoted by the symbol `$\to$') is found in neither. Hence, with a simply unconcerned manifold, there is can be no union, and hence no cognition.
@@ -107,11 +107,48 @@ This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant'
 Kant goes on to further elaborate regarding the offspring of such a union, which draw their resemblance from space (corresponding to the outer sense) and time (corresponding to the inner sense), in sections entitled \emph{On the Synthesis of Apprehension in Intuition}, and the \emph{On the Synthesis of Reproduction in Imagination}. However these discussions are merely the procedural lemmae of his transcendental analytic, contingent on the synthetic unity of apperception, and we will not elaborate upon them here. Instead we will spend the rest of our time examining the synthetic unity of apperception, this unifying force which marries sensibility and understanding.
 
 \section*{The Synthetic Unity of Apperception}
-What makes the synthetic unity of apperception so essential to the process of cognition? Kant canonicalises it as the basis for the possibility of understanding in respect to intuition. His presentation is as follows: 
+What makes the synthetic unity of apperception so essential to the process of cognition? Kant canonicalises it as the basis for the possibility of understanding in respect to intuition. His presentation is as follows:
 
 \begin{enumerate}
   \item The supreme principle for the possibility of all intuition in reference to sensibility was, according to the transcendental aesthetic, that everything manifold in intuition is subject to the formal conditions of space and time.
   \item The supreme principle for the possibility of all intuition in reference to understanding is that everything manifold in intuition is subject to the conditions of the original synthetic unity of apperception.
 
   \autocite[B137]{hackett}
+\end{enumerate}
+
+\noindent
+On a surface level, it is clear that all possible cogition (i.e. `intuition in reference to understanding') requires the synthetic unity of apperception. However the more interesting realisation is that this also gives all of our intuitions a fundamentally subjective nature -- there will always have to be an `\emph{I think}' particle attached to our cognitions, a self-referential piece that ties these cognitions to the cognitive subject. It is never possible to \emph{cognise} in a manner where the subject is removed from the object. Hence, \emph{all objective cognition is dependent on the cognising subject}.
+
+This is truly a audacious conclusion, and it is important for the traveller to not completely misunderstand it. For we are \emph{not} saying that all cognition is subjective, in the sense of wayward Idealism. Rather, the presence of the subject in cognition is an a priori necessity for objective cognition in the first place:
+
+\begin{quote}
+  The reference to this necessary unity is there even if the judgment itself is empirical and hence contingent -- e.g., Bodies are heavy. By this I do not mean that these presentations belong necessarily to one another in the empirical intuition. Rather, I mean that they belong to one another by virtue of the necessary unity of apperception in the synthesis of intuitions
+
+  \autocite[B142]{hackett}
+\end{quote}
+
+\noindent
+It is through the subject, that different intuitions are brought into unity. Without this synthetic unity of apperception, different terms cannot be brought into commensuration by a common measure, allowing no objective determination, only associative ones. Kant elaborates:
+
+\begin{quote}
+  Only through this [reference to the original apperception and it's necessary unity] does this relation [among presentations] become a \emph{judgement}, i.e. a relation that is \emph{valid objectively} and can be distinguished adequately from a relation of the same presentations that would only have a subjective validity -- e.g., a relation according to the laws of association. According to these laws, all I could say is: When I support a body, then I feel a pressure of heaviness. I could not say: It, the body, is heavy -- which amounts to saying that these two presentations are not merely together in perception \ldots\ but are combined in the object, i.e., combined independently of what the subject's state is.
+
+  \autocite[B143]{hackett}
+\end{quote}
+
+This transcendental process, in which the presence of the subject (in the form of the synthetic unity of appreception) is contained within the cognitive process, but yet somehow `cancels out' the subjectivity of presentations, allowing true objective cognition -- is a gymnastic leap of thought of Comănecic\footnote{Nadia Comăneci, a Romanian gymnast who achieved the first perfect score at the Olympics.} proportions. It is important that we understand this synthetic unity of appreception, for it speaks to the deep nature of how cognition works. A simplified demonstration can be given in the following manner:
+
+% Sofia wrote this note:
+% dear shen your company and friendship are very dear to me. go and fim uh finish your eesay ;)
+
+\begin{enumerate}
+  \item Through the faculty of sensibility, we yield the manifolds of intuition.
+  \item Through the faculty of understanding, we yield conception.
+  \item We begin the synthetic process of merging sensibility and understanding:
+  \begin{enumerate}
+    \item The manifolds of intuition, which are subjective to the sensible self, contain the a priori of space, time, and the synthetic unity of apperception.
+    \item The a priori categories behind concepts are by necessity, subjective to the judgemental self.
+    \item The two subjective elements are combined synthetically through their common denominator.
+  \end{enumerate}
+  \item The resulting cognition is the union of a concept and an intuition.
 \end{enumerate}
