Completed final paragraph of the synthetic unity of apperception

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -136,7 +136,7 @@ It is through the subject, that different intuitions are brought into unity. Wit
   \autocite[B143]{hackett}
 \end{quote}
 
-This transcendental process, in which the presence of the subject (in the form of the synthetic unity of appreception) is contained within the cognitive process, but yet somehow `cancels out' the subjectivity of presentations, allowing true objective cognition -- is a gymnastic leap of thought of Comănecic\footnote{Nadia Comăneci, a Romanian gymnast who achieved the first perfect score at the Olympics.} proportions. It is important that we understand this synthetic unity of appreception, for it speaks to the deep nature of how cognition works. A simplified demonstration can be given in the following manner:
+This transcendental process, in which the presence of the subject (in the form of the synthetic unity of apperception) is contained within the cognitive process, but yet somehow `cancels out' the subjectivity of presentations -- allowing true objective cognition -- is a gymnastic leap of thought of Comănecic\footnote{Nadia Comăneci, a Romanian gymnast who achieved the first perfect score at the Olympics.} proportions. It is important that we understand this synthetic unity of apperception, for it speaks to the deep nature of how cognition works. A simplified demonstration can be given in the following manner:
 
 % Sofia wrote this note:
 % dear shen your company and friendship are very dear to me. go and fim uh finish your eesay ;)
@@ -150,5 +150,8 @@ This transcendental process, in which the presence of the subject (in the form o
     \item The a priori categories behind concepts are by necessity, subjective to the judgemental self.
     \item The two subjective elements are combined synthetically through their common denominator.
   \end{enumerate}
-  \item The resulting cognition is the union of a concept and an intuition.
+  \item The resulting union of intuition and concept yields cognition
 \end{enumerate}
+
+\noindent
+Thus concludes Kant's treatment synthetic unity of apperception, the only means in which cognition (including objective cognition) can arise. It is the synthesising process of the transcendental elements of sensibility (aesthetics) and understanding (logic), that is only possible "through the necessary reference of the manifold of intuition to the one [self]" \autocite[B140]{hackett}.
