Added final section header, on the Kantian theory of mind

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -155,3 +155,5 @@ This transcendental process, in which the presence of the subject (in the form o
 
 \noindent
 Thus concludes Kant's treatment synthetic unity of apperception, the only means in which cognition (including objective cognition) can arise. It is the synthesising process of the transcendental elements of sensibility (aesthetics) and understanding (logic), that is only possible "through the necessary reference of the manifold of intuition to the one [self]" \autocite[B140]{hackett}.
+
+\section*{The Kantian Theory of Mind}
