Added intro to Kantian theory of mind

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -157,3 +157,4 @@ This transcendental process, in which the presence of the subject (in the form o
 Thus concludes Kant's treatment synthetic unity of apperception, the only means in which cognition (including objective cognition) can arise. It is the synthesising process of the transcendental elements of sensibility (aesthetics) and understanding (logic), that is only possible "through the necessary reference of the manifold of intuition to the one [self]" \autocite[B140]{hackett}.
 
 \section*{The Kantian Theory of Mind}
+We are now at the summit. The rarefied atmosphere of these transcendental heights have melted away all contingency. These transcendental elements, like the rays of an ascendent sun, shine brilliantly upon our visage, unobstructed by the smog and haze of a posteriori pollution. Our journey was a difficult ascent, one which leaves us with a breathless countenance -- weary from the exertions of our guide's transcendental analytic. And speaking of which \ldots\ where \emph{is} our guide? Look up and turn around! -- but alas, he's nowhere to be seen. We're left alone, with these precepts, and only the ghost of a smile as our transcendental Virgil leaves us. There are further peaks, and farther ranges\footnote{The transcendental dialectic in particular, forms the bulk of Kant's remaining treatise -- but it is only an exposition of the consequences of the analytic. We will only reference it's findings.} -- but none matter to us now, other than the view which is ahead. It is now time to contemplate.
