Add (commented out) outline for the Kantian theory of mind

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -158,3 +158,15 @@ Thus concludes Kant's treatment synthetic unity of apperception, the only means 
 
 \section*{The Kantian Theory of Mind}
 We are now at the summit. The rarefied atmosphere of these transcendental heights have melted away all contingency. These transcendental elements, like the rays of an ascendent sun, shine brilliantly upon our visage, unobstructed by the smog and haze of a posteriori pollution. Our journey was a difficult ascent, one which leaves us with a breathless countenance -- weary from the exertions of our guide's transcendental analytic. And speaking of which \ldots\ where \emph{is} our guide? Look up and turn around! -- but alas, he's nowhere to be seen. We're left alone, with these precepts, and only the ghost of a smile as our transcendental Virgil leaves us. There are further peaks, and farther ranges\footnote{The transcendental dialectic in particular, forms the bulk of Kant's remaining treatise -- but it is only an exposition of the consequences of the analytic. We will only reference it's findings.} -- but none matter to us now, other than the view which is ahead. It is now time to contemplate.
+
+% Talk about the following topics:
+
+% The relationship between the synthetic unity of apperception and self-consciousness
+
+% Whether or not the self-perceptive act is necessary for all cognitive agents
+
+% The objective/subjective nature of the empirical sciences
+
+% Whether or not metaphysical knowledge is limited by reason (?)
+
+% Note: the conclusion is located at ./sections/conclusion.tex
