Completed discussion on self awareness

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -162,6 +162,19 @@ We are now at the summit. The rarefied atmosphere of these transcendental height
 % Talk about the following topics:
 
 % The relationship between the synthetic unity of apperception and self-consciousness
+What is the nature of the synthetic unity of apperception, within this engine of cognition? We are shown that all cognition requires an intuition of the self. Does this make the synthetic unity of apperception the faculty (or nature) of self-awareness? Self awareness is one of the indisputable hallmarks of truly sapient beings -- it is a faculty which only until recently, we ascribed only to humans.\footnote{Empirical experiments with higher-order primates and dolphins are highly suggestive of self-awareness in other creatures.} For neither sensibility nor understanding are sufficient for intelligence. The former is within the domain of all sensate creatures -- from plants, to insects, to clockwork automata. Even the latter is not enough. Computer programs can be highly conceptual, capable of discretionary judgements, but yet they lack the general-purpose learning that is so characteristic of intelligence. The nature of this inadequacy seems to be plausible: while an artificial neural network is able to execute judgements on input, all such judgement takes the unwieldy form of contingent association. "When I support a body, then I feel a pressure of heaviness" \autocite[B143]{hackett}, v.s. "given input $x$, return output $y$." There is never that spark of true cognition, where "the nature of $x$ \emph{is} $y$." On a formal level, the very foundations of computational machine learning is \emph{entirely} based on Kant's "laws of association," with linear algebra serving as the building blocks of such associative neural networks. While it is beyond the scope of this paper to examine the architectural and technical foundations of artificial intelligence\footnote{Advances by Goodfellow et al. in generative adversarial neural networks (GANNs) may serve as an interesting comparative thesis to explore.}, the necessity of the synthetic unity of apperception for self-awareness is a thesis as intriguing indeed.
+
+\noindent
+Going back to the treatise of our erstwhile guide, Kant himself seems to offer an indirect, almost coquettish answer. He never definitively state whether or not the synthetic unity of apperception is the wellspring of self-awareness. However, amidst a brief aside on empirical psychology in the \emph{Paralogisms of Pure Reason}, he comments:
+
+\begin{quote}
+  Apperception is itself the basis of the possibility of the categories, which in tum present nothing but the synthesis of the manifold of intuition insofar as this manifold has unity in apperception. Hence self-consciousness as such is the presentation of what is the condition of all unity and is yet itself unconditioned. Hence we can say about the thinking I (the soul) -- which thinks itself as substance, as simple, as numerically identical in all time, and as the correlate of all existence from which all other existence must be inferred -- that it cognises \emph{not so much itself through the categories}, but cognises the categories, and through them all objects, in the absolute unity of apperception and hence \emph{through itself}.
+
+  \autocite[A399]{hackett}
+\end{quote}
+
+\noindent
+Verbose, comprehensive, and tedious to a fault -- nonetheless Kant gives us a hint in the affirmative. Most tellingly, he is careful to make the distinction that our apperception is not the simple faculty of \emph{intuiting ourself} (i.e. self-reflection).\footnote{Historically, apperception is the empirical, psychological term of a kind of self-consciousness.} But rather, that all of our cognition ("the categories, and through them all objects") is done through this synthetic unity of apperception. It is definitely \emph{much} too early of us to crown such a faculty with the gaudy chalice of the term `soul' (and indeed, Kant himself answers in the negative -- at least, to the existence of an \emph{immortal} soul) -- but to take such a synthetic unity as the source for self-awareness is a plausible thesis indeed. 
 
 % Whether or not the self-perceptive act is necessary for all cognitive agents
 
