Began paragraph on the neccessity of the self-perceptive act

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -174,9 +174,13 @@ Going back to the treatise of our erstwhile guide, Kant himself seems to offer a
 \end{quote}
 
 \noindent
-Verbose, comprehensive, and tedious to a fault -- nonetheless Kant gives us a hint in the affirmative. Most tellingly, he is careful to make the distinction that our apperception is not the simple faculty of \emph{intuiting ourself} (i.e. self-reflection).\footnote{Historically, apperception is the empirical, psychological term of a kind of self-consciousness.} But rather, that all of our cognition ("the categories, and through them all objects") is done through this synthetic unity of apperception. It is definitely \emph{much} too early of us to crown such a faculty with the gaudy chalice of the term `soul' (and indeed, Kant himself answers in the negative -- at least, to the existence of an \emph{immortal} soul) -- but to take such a synthetic unity as the source for self-awareness is a plausible thesis indeed. 
+Verbose, comprehensive, and tedious to a fault -- nonetheless Kant gives us a hint in the affirmative. Most tellingly, he is careful to make the distinction that our apperception is not the simple faculty of \emph{intuiting ourself} (i.e. self-reflection).\footnote{Historically, apperception is the empirical, psychological term of a kind of self-consciousness.} But rather, that all of our cognition ("the categories, and through them all objects") is done through this synthetic unity of apperception. It is definitely \emph{much} too early of us to crown such a faculty with the gaudy chalice of the term `soul' (and indeed, Kant himself answers in the negative -- at least, to the existence of an \emph{immortal} soul) -- but to take such a synthetic unity as the source for self-awareness is a plausible thesis indeed.
 
 % Whether or not the self-perceptive act is necessary for all cognitive agents
+Subscribing to such a gentle `plausible thesis' (even though such concessions to likelihood would cause Kant to shudder) yields us another very interesting conclusion. That this self-perceptive act -- call it self-awareness or the synthetic unity of apperception -- is a necessary condition for all cognitive beings. Without the imposition of the a priori form of the self into the very nature of intuition, the synthetic process of merging sensibility and understanding can never happen (as per Kant's demonstration in the Analytic). This conclusion provides us with a possible answer to Kant's prescient question, that which so haunts the author of this essay: "It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard" \autocite[B72]{hackett}. Perhaps it has indeed been decided \ldots\ and the lack of artificial, cognitive agents is the proof. There is room for further inquiry, however. Kant's casual qualification of his question -- "that of any finite thinking being", supports our examination, in the same circumspect way that a bloodstain may support a detective on a case.
+
+\noindent
+For consider
 
 % The objective/subjective nature of the empirical sciences
 
