Completed paragraph on Flatland metaphor

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,4 +1,4 @@
-\section*{The Transcendental Aesthetic}
+necessity\section*{The Transcendental Aesthetic}
 Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this springboard of aesthetics, where Kant begins the Copernican leap that upturns our world.
 
 For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects\footnote{Cognitions arise from the union of understanding with sensibility. Kant explores this in further detail starting at the transcendental analytic.}, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
@@ -180,9 +180,10 @@ Verbose, comprehensive, and tedious to a fault -- nonetheless Kant gives us a hi
 Subscribing to such a gentle `plausible thesis' (even though such concessions to likelihood would cause Kant to shudder) yields us another very interesting conclusion. That this self-perceptive act -- call it self-awareness or the synthetic unity of apperception -- is a necessary condition for all cognitive beings. Without the imposition of the a priori form of the self into the very nature of intuition, the synthetic process of merging sensibility and understanding can never happen (as per Kant's demonstration in the Analytic). This conclusion provides us with a possible answer to Kant's prescient question, that which so haunts the author of this essay: "It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard" \autocite[B72]{hackett}. Perhaps it has indeed been decided \ldots\ and the lack of artificial, cognitive agents is the proof. There is room for further inquiry, however. Kant's casual qualification of his question -- "that of any finite thinking being", supports our examination, in the same circumspect way that a bloodstain may support a detective on a case.
 
 \noindent
-For consider
+For consider the following hypothesis (this paragraph takes the form of a proof via \emph{reductio}). Let there be given a \emph{finite}, thinking being -- those a priori forms of intuition consist not of space nor time. Instead, it is capable of fulfilling all the sensory precepts of an objective intuition without said limitation (i.e. it is not simply insensate). Let it be further granted that such a creature is fully capable of the synthetic unity of apperception, viz. it is fully self-aware. What manner of a creature is this? It is a Flatlandian creature, the solipsistic Monarch of Pointland, a denizen of Edwin Abbott's novella.\footnote{In the novel \emph{Flatland: A Romance of Many Dimensions}, the protagonist (a Square) lives in a 2-dimensional world. During the course of their adventures, they ultimately visit `Pointland' -- inhabited by a single Point, who perceives all others as thoughts originating in his own mind.} Sensuate, but yet neither in space nor time, such a creature perceives all sensation as thoughts originating in his own mind. The lack of a spatial intuition by necessity abolishes the \emph{outer sense}, which makes all objective perception a part of the self. Likewise, the lack of a temporal intuition by necessity abolishes the inner sense -- as well as to make all occurrences simultaneous, and co-ordinate. Such a creature -- who exists as it's existence has been granted -- is by it's very nature is \emph{not} a finite, thinking being. To perceive all as a part of the self, separated not by distance, nor by time -- is to be an infinite, eternal being. Thus completes the arc of this proof via \emph{reductio}, and the demonstration is complete. The proposition is that all finite thinking beings must cognise through the a priori forms of space, and time.
 
 % The objective/subjective nature of the empirical sciences
+
 
 % Whether or not metaphysical knowledge is limited by reason (?)
 
